crates/agglayer-config/tests/snapshots/validate_deserialize__extra_certificate_signers.snap
---
source: crates/agglayer-config/tests/validate_deserialize.rs
expression: config
---
prover-entrypoint = "http://127.0.0.1:8080"

[full-node-rpcs]

[l2]
rpc-timeout = "45s"

[proof-signers]

[log]
level = "info"
outputs = []
format = "pretty"

[rpc]
grpc-port = 9089
readrpc-port = 9090
admin-port = 9091
admin-tls-port = 9491
readrpc-tls-port = 9490
grpc-tls-port = 9489
host = "0.0.0.0"
request-timeout = "3m"

[rate-limiting]
send-tx = "unlimited"

[rate-limiting.network]

[outbound.rpc.settle]
max-retries = 3
retry-interval = "7s"
confirmations = 1
settlement-timeout = "20m"

[outbound.rpc.settle.gas-price]
ceiling = "100gwei"

[l1]
chain-id = 1337
node-url = "http://zkevm-mock-l1-network:8545/"
ws-node-url = "ws://zkevm-mock-l1-network:8546/"
connect-attempt-timeout = "3s"
rollup-manager-contract = "0xb7f8bc63bbcad18155201308c8f3540b07f84f5e"
polygon-zkevm-global-exit-root-v2-contract = "0xb7f8bc63bbcad18155201308c8f3540b07f84f5e"
rpc-timeout = "45s"

[auth.local]
private-keys = []

[telemetry]
prometheus-addr = "0.0.0.0:3000"

[epoch.block-clock]
epoch-duration = 6
genesis-block = 0

[shutdown]
runtime-timeout = "5s"

[certificate-orchestrator]
input-backpressure-buffer-size = 1000

[certificate-orchestrator.prover.sp1-local]

[storage]
db-path = "./storage"

[extra-certificate-signer]
1337 = "0xabcdefabcdefabcdefabcdefabcdefabcdefabcd"
